[build-system]
requires = ["setuptools>=64", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hyloa"
version = "1.7.0"
description = "A package for analyzing hysteresis loops"
readme = "README.md"
requires-python = ">=3.10.12"
license = {file = "LICENSE.txt"}
authors = [
    { name = "Francesco Zeno Costanzo", email = "zenofrancesco99@gmail.com" }
]
dependencies = [
    "PyQt5",
    "numpy",
    "scipy",
    "pandas",
    "matplotlib"
]
keywords = ["hysteresis", "analysis", "materials", "mechanics", "GUI"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/Francesco-Zeno-Costanzo/hyloa"

[project.scripts]
hyloa = "hyloa.main:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
